Fix publish channel selector alignment

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -1190,7 +1190,6 @@ $actions-z-index: 2;
 .channel__selector--publish {
   display: inline-block;
   margin-bottom: 0;
-  margin-top: -2px;
   width: unset !important;
 
   .channel-thumbnail {
